// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Groups 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ alignItems 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 gDfoPk"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ any props 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc className"
  id="Counter"
  title="title"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ clean (React.Fragment remove) 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        A
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        B
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        C
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        D
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        E
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        F
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 dcKhhz"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        J
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ design: horizontal 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ design: vertical 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 iFNDcQ"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 bcXHUW"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 bcXHUW"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 bcXHUW"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ groups 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
    >
      <div
        class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
      >
        <button
          class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
          type="button"
        >
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
            Download statement
          </span>
        </button>
      </div>
      <div
        class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
      >
        <button
          class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
          type="button"
        >
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
            <svg
              fill="currentColor"
              height="12"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
              />
            </svg>
          </span>
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
             Delete statement
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Groups w/ height 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 hxvwrz"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <div
      class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
    >
      <div
        class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
      >
        <button
          class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
          type="button"
        >
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
            Download statement
          </span>
        </button>
      </div>
      <div
        class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
      >
        <button
          class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
          type="button"
        >
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
            <svg
              fill="currentColor"
              height="12"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs />
              <path
                d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
              />
            </svg>
          </span>
          <span
            class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
          >
             Delete statement
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Groups w/ justifyContent 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 hDAsnh"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ null 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ size: l 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 eZgkfB"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hoVngd"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hoVngd"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hoVngd"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ size: m 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fGINAc"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 htkhjN"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ size: s 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 fBejJs"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 gOSTmR"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 gOSTmR"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 gOSTmR"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ size: xl 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 feKNWl"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hTmBcZ"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hTmBcZ"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 hTmBcZ"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;

exports[`Groups w/ size: xs 1`] = `
<div
  class="Groupsstyles__Box-sc-1dief2o-0 dJximv"
>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 cmOVpV"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 jolcIP"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Make payment
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 cmOVpV"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        Download statement
      </span>
    </button>
  </div>
  <div
    class="Groupsstyles__Item-sc-1dief2o-1 cmOVpV"
  >
    <button
      class="Buttonstyles__Box-qfvnbt-0 ebCIkw"
      type="button"
    >
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
        <svg
          fill="currentColor"
          height="12"
          viewBox="0 0 24 24"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs />
          <path
            d="M7 9v11h10V9h2v12a1 1 0 01-1 1H6a1 1 0 01-1-1V9h2zm4 0v9H9V9h2zm4 0v9h-2V9h2zm0-7a1 1 0 01.949.684l.771 2.315L20 5v2H4V5l3.279-.001.772-2.315A1 1 0 019 2h6zm-.72 2H9.72l-.333.999h5.225L14.279 4z"
          />
        </svg>
      </span>
      <span
        class="Buttonstyles__ContentWrapper-qfvnbt-1 kJiCTN"
      >
         Delete statement
      </span>
    </button>
  </div>
</div>
`;
